--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-inverse bg-faded">
-    <h1 class="navbar-brand mb-0">{{ titulo }}</h1>
+    <h1 class="navbar-brand mb-0 w-100 text-center">{{ titulo }}</h1>
 </nav>
