--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-primary" (click)='verificaResposta()'>Verificar
+                    <button type="button" class="btn btn-primary mt-5" (click)='verificaResposta()'>Verificar
                         Resposta</button>
                 </div>
             </div>
